@startuml

abstract class Pessoa {
    -pessoaId: Long
    -nomeCompleto: string
    -CPF: string
    -RG: string
    -dataNascimento: date
    -gênero: string
    -email: string
    -telefoneCelular: string
    -telefoneFixo: string
    -endereco: Endereco
    -cidadeNatal: string
    -estadoNatal: string
    -estrangeiro: boolean
    -dadosAcademicos: DadoAcademico
    -dadosProfissionais: DadoProfissional
}

class vitor {
 -nome: String
 +idade: int
}

class Professor {
    -especialidade: string
    -login: string
    -senha: string
}

class Aluno {
    -alunoID: int
    -login: string
    -senha: string
    -contratos: Contrato[]
}

class Endereco {
    -enderecoID: int
    -CEP: string
    -tipo: string
    -nome: string
    -numero: string
    -complemento: string
    -bairro: string
    -estadoAtual: string
    -cidadeAtual: string
}

class DadoAcademico {
    -dadoAcademicoID: int
    -serieEscolar: string
    -escolaridadeAtual: string
    -orgaoInstituicaoEmpresa: string
    -outros: string
}

class DadoProfissional {
    -dadoProfissionalID: int
    -profissaoFuncaoCargo: string
    -orgaoInstituicaoEmpresa: string
    -outros: string
}

class Contrato {
    -contratoID: int
    -situacaoContrato: string
    -numeroContrato: int
    -tipoContrato: string
    -contratante: string
    -modalidade: string
    -dataInicio: date
    -dataTermino: date
    -matricula: Matricula
}

class Matricula {
    -matriculaID: int
    -atual: boolean
    -curso: Curso
    -metodologia: string
    -dataInicioMatricula: date
    -dataFimMatricula: date
    -professores: Professor[]
    -numHorasAulaCurso: int
    -duracaoCurso: int
    -diasDaSemana: string
    -horário: string
}

class Curso {
    -cursoID: int
    -metodologia: string
    -numHorasAulaCurso: int
    -duracaoCurso: int
    -descricao: string
}

Pessoa <|-- Professor
Pessoa <|-- Aluno

class Aluno {
    -matricula: Matricula
}

Contrato "1" *-- "1" Matricula
Matricula "1" o-- "n" Professor
Matricula "1" -- "1" Curso

@enduml